--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
+    <h1>Hello World!</h1>
 
     <script src="script.js"></script>
 </body>
